@@ -12,7 +12,7 @@
 
 <hr>                   FVWM Frequently Asked Questions
 <hr>
-Last updated March 18, 2001 for beta release 2.3.29 and official
+Last updated May 1, 2001 for beta release 2.3.31 and official
 release 2.2.5.
 
 Contents
@@ -20,7 +20,7 @@ Contents
 0. *The* most frequently asked question :)
 
      0.1  A few minutes after fvwm is started my keyboard and mouse
-          bindings stop working. What can I do?
+          bindings stop working.  What can I do?
 
 1. About Fvwm
 
@@ -81,7 +81,7 @@ Contents
     3.14  Some applications (e.g. Eterm) don't use the icon I defined for them.
           Why?
     3.15  I don't like the gaps in my icon box when I de-iconify an
-          application. Is there some kind of auto arrange function?
+          application.  Is there some kind of auto arrange function?
     3.16  How do I set up a fvwm menu item that shuts down my Linux machine?
     3.17  Although the Recapture commands is obsolete, do I still need it to
           apply certain style changes?
@@ -107,7 +107,7 @@ Contents
      4.5  I used to use GoodStuff in FVWM 1.xx, but it's not in the 2.xx
           distribution.  What do I use now?
      4.6  I want to have the sub panels in FvwmButtons not at their default
-          position near the button but somewhere else on the screen. Is this
+          position near the button but somewhere else on the screen.  Is this
           possible?
 
 5. Development, Known Problems &amp; Bug Reports
@@ -131,13 +131,13 @@ Contents
     5.10  Every time I update my install, my currently running fvwm
           session dies.  Why is that?
     5.11  After I restart fvwm certain windows or icons raise above
-          all other windows and cannot be lowered by any means. One
+          all other windows and cannot be lowered by any means.  One
           example are the shortcuts of KFM (the KDE file manager).
           What can I do about that?
     5.12  The StartsOnPage style does not work for me.  Why?
     5.13  Some modules can not be started when I restart fvwm.
     5.14  I'm running Rational Rose and fvwm ignores its windows.
-    5.15  Although I use the WIndowListSkip style for my modules they
+    5.15  Although I use the WindowListSkip style for my modules they
           still show up in FvwmIconMan, FvwmWinList etc.
 
 6. Miscellaneous
@@ -152,6 +152,7 @@ Contents
           happened to to rxvt and rclock which Rob Nation used to
           support?  Where can I find them now?
      6.6  How do I set the background with fvwm?
+     6.7  When I use Fvwm --- isn't the right color.  Whats wrong?
 
 7. Hints and Examples from the Developers
 
@@ -176,9 +177,9 @@ Contents
 <hr>                0 - The most frequently asked question
 <hr>
 0.1  A few minutes after fvwm is started my keyboard and mouse
-     bindings stop working. What can I do?
+     bindings stop working.  What can I do?
 
-A: Probably your NumLock, CapsLock or ScrollLock key is pressed. See
+A: Probably your NumLock, CapsLock or ScrollLock key is pressed.  See
    Q 5.5 for more details.
 
 Trivia: In all my years as an fvwm developer this has been by far the
@@ -525,12 +526,18 @@ A: Since the latest fvwm versions are mostly GNOME compliant, you may
    The file ~/.xinitrc can be used for the similar purposes if you want
    to bypass any system-wide logic put by your distributor or sysadmin.
 
-   An alternative solution is to run FVWM on top of gnome-session.
-   From the gnome foot menu in the gnome panel, choose
+
+   An alternative solution is to run FVWM inside of /usr/bin/gnome-session.
+   After you start gnome-session (don't start FVWM yourself), go to the
+   foot menu in the GNOME panel, then choose
 
      System menus / Settings / Desktop / Window Manager
 
    and create an entry for FVWM.  FVWM supports session management.
+
+   If you run gnome-session, SessionInitFunction and SessionRestartFunction
+   are called instead of InitFunction and RestartFunction, see the man page.
+   StartFunction, where we suggest to run modules, is called as usual.
 
 
    Here are examples of the GNOME Window Manager hints support in FVWM:
@@ -581,6 +588,10 @@ A: The built in command WindowList provides a very close approximation
       Key Tab A M WindowList Root c c NoDeskSort
 
    Starting with release 2.3.2, the above key binding is built-in.
+
+   Starting with release 2.3.15 you can hold the alt key down and
+   keep hitting tab.  A single alt-tab selects the previous window.
+   The remainder of this FAQ entry describes releases prior to 2.3.2.
 
    Hitting Alt-Tab will pop up the WindowList menu.  Unlike another GUI
    you should not keep the Alt key held down, the menu will stay up
@@ -666,12 +677,12 @@ A: Both of these commands change the keyboard focus to the target
 
 A: Although fvwm has commands for binding movements to keystrokes,
    controlling the pointer with the keyboard should really be handled by
-   the X server. The following is an excerpt of the X FAQ on this topic:
+   the X server.  The following is an excerpt of the X FAQ on this topic:
 
 
       If you have the X Keyboard (XKB) Extension, you can enable mouse keys,
       which makes it possible to generate mouse motion and button events
-      using the keyboard.   Events generated by MouseKeys are completely
+      using the keyboard.  Events generated by MouseKeys are completely
       transparent -- they will work with any application that connects to a
       server that has the X Keyboard Extension, regardless of whether the
       application itself uses XKB.
@@ -686,7 +697,7 @@ A: Although fvwm has commands for binding movements to keystrokes,
       it also has a binding to Pointer_EnableKeys in its default keymap.
       You use Alt+Shift+Num_Lock to toggle MouseKeys on and off.  If you
       are using an earlier release of X or XFree86, you won't have XKB and
-      the instructions will not work. See http://www.XFree86.org/FAQ for
+      the instructions will not work.  See http://www.XFree86.org/FAQ for
       more information.)
 
       You might also have to turn off server num lock for this to work.
@@ -971,7 +982,7 @@ A: It was actually part of the M4 preprocessing.  You can use the 'Read'
    builtin to get the same effect, or use the FvwmM4 module.
 
 <hr>
-3.12  How do I get window titles on sub windows of ...  (e.g. Netscape)?
+3.12  How do I get window titles on sub windows of ... (e.g. Netscape)?
 
 A: These windows are known as 'transient' windows because of their
    short lived nature.  To get the window decorations for transient
@@ -1001,17 +1012,17 @@ A: The directory for system-wide configuration files changed from
 
 A: Eterm provides its own icon and fvwm does not know if it is a plain
    icon or if Eterm wants to draw into it (like xbiff does when you get
-   new mail). You can explicitly override the application provided
+   new mail).  You can explicitly override the application provided
    icon with a style command:
 
      Style &lt;application-name&gt; IconOverride
 
 <hr>
 3.15  I don't like the gaps in my icon box when I de-iconify an
-      application. Is there some kind of auto arrange function?
+      application.  Is there some kind of auto arrange function?
 
 A: Assuming you are using the IconBox option of the Style command this
-   can be done with a tricky fvwm function. Put the DeiconifyAndRearrange
+   can be done with a tricky fvwm function.  Put the DeiconifyAndRearrange
    function below in your configuration file:
 
      AddToFunc DeiconifyAndRearrange
@@ -1019,7 +1030,7 @@ A: Assuming you are using the IconBox option of the Style command this
       + C All (CurrentPage Iconic) RecaptureWindow
 
    And then replace all places where you call the Iconify builtin
-   function to de-iconify an icon with a call to the new function. For
+   function to de-iconify an icon with a call to the new function.  For
    example replace
 
      AddToFunc IconFunc
@@ -1051,7 +1062,7 @@ A: Write a little shell script to run the shutdown command.
 
    Install sudo on your system (see the man page, etc.)
 
-   Set up the sudoers config file to allow you, your wife, etc. to run
+   Set up the sudoers config file to allow you, your wife, etc.  to run
    that script with root permissions.
 
    Add a menu item to your FVWM root menu (or wherever) that invokes
@@ -1069,7 +1080,7 @@ A: Excerpt from the man page:
    immediately but only when fvwm is idle, i.e. no user interaction
    or module input is pending.  Specifically, new Style options that
    are set in a function are not applied until after the function has
-   completed.  This can sometimes lead to unwanted effects. To force
+   completed.  This can sometimes lead to unwanted effects.  To force
    that all pending changes are applied immediately, use the UpdateStyles,
    Refresh or RefreshWindow commands.
 
@@ -1200,7 +1211,7 @@ A: FVWM spawns itself into all found screens unless -s command line
 
 
    Another method, which should work for older fvwm versions as well,
-   is to specify a separate file for each screen explicitly. For this,
+   is to specify a separate file for each screen explicitly.  For this,
    start a separate fvwm for each screen in your .xinitrc (or .Xclients):
 
      fvwm2 -s -d :0.0 -f .fvwm2rc-0 &amp;
@@ -1273,7 +1284,7 @@ A: Yup, I imagine that you might be.  Things like the InitFunction not
 
    The reason for all this is because of the fact that FvwmM4 is a
    module.  Fvwm won't be looking at the commands coming back from
-   the module until after it hits the mainloop of the code, AFTER the
+   the module until after it hits the main loop of the code, AFTER the
    startup is all done and it has already tried to execute the
    InitFunction.
 
@@ -1316,7 +1327,7 @@ A: GoodStuff was renamed to FvwmButtons.  Same module, new name (that
 
 <hr>
 4.6  I want to have the sub panels in FvwmButtons not at their default
-     position near the button but somewhere else on the screen. Is this
+     position near the button but somewhere else on the screen.  Is this
      possible?
 
 A: Yes, but not with the current implementation of the panels.  Please
@@ -1352,14 +1363,14 @@ A: If you plan to write a patch, *please*, first of all fetch the
 
    So if you have a suggestion (or a patch), please think of a way to
    make it as small and generic as possible if you feel it belongs in
-   the main module. Please have a look at the enhancements that are
+   the main module.  Please have a look at the enhancements that are
    listed in our bug tracking system (see Q5.3).
 
    If you plan to make a patch, please contact the fvwm-workers mailing
-   list first. From time to time we are changing the code in a very
+   list first.  From time to time we are changing the code in a very
    disruptive way and if you create a patch to a version before such
    changes were made we will all have a hard time to integrate the
-   patch. Most of the time we will ask you to update the patch for the
+   patch.  Most of the time we will ask you to update the patch for the
    current code anyway.
 
    Bear in mind that we make no guarantees that we'll add any requested
@@ -1465,9 +1476,9 @@ A: First, check your rc file and your .Xdefaults to make sure that
 5.5  Why do NumLock, CapsLock and ScrollLock interfere with
      ClickToFocus and/or my mouse bindings?
 
-A: Because they are treated as modifiers. You can use the
+A: Because they are treated as modifiers.  You can use the
    IgnoreModifiers command to turn individual modifiers off for
-   bindings. With XFree86 the right command is
+   bindings.  With XFree86 the right command is
 
      IgnoreModifiers L25
 
@@ -1478,19 +1489,19 @@ A: Because they are treated as modifiers. You can use the
    This command creates a lot of extra network traffic, depending
    on your CPU, network connection, the number of Key Mouse commands
    in your configuration file and the number of modifiers you want to
-   ignore. If you do not have a lightning fast machine or very few
-   bindings you should not ignore more than two modifiers. So do
+   ignore.  If you do not have a lightning fast machine or very few
+   bindings you should not ignore more than two modifiers.  So do
    not ignore scroll-lock if you have no problem with it.
 
    A better way to solve this problem is to modify the keyboard
-   mapping of your X server. The commands
+   mapping of your X server.  The commands
 
      xmodmap -e "clear Lock"
      xmodmap -e "clear Mod2"
      xmodmap -e "clear Mod5"
 
    remove the CapsLock, NumLock and ScrollLock from the keyboard map.
-   Pressing these keys has no effect then. To re-add them try this:
+   Pressing these keys has no effect then.  To re-add them try this:
 
      xmodmap -e "add Lock = Caps_Lock"
      xmodmap -e "add Mod2 = Num_Lock"
@@ -1590,7 +1601,7 @@ A: Many OSes swap the program from memory via the image on the disk,
 
 <hr>
 5.11  After I restart fvwm certain windows or icons raise above
-      all other windows and cannot be lowered by any means. One
+      all other windows and cannot be lowered by any means.  One
       example are the shortcuts of KFM (the KDE file manager).
       What can I do about that?
 
@@ -1609,7 +1620,7 @@ A: Some applications use so called 'override redirect' windows that
    since KFM is violating the conventions and the applications may
    violate them in different ways.
 
-   Now the command. Put this anywhere in your .fvwm2rc file:
+   Now the command.  Put this anywhere in your .fvwm2rc file:
 
      BugOpts RaiseOverUnmanaged on
 
@@ -1678,7 +1689,7 @@ A: This problem might occur on other applications besides the one
 
    Heres what we found out:
 
-   Rational Rose  uses software from Mainsoft  that  lets MS Windows
+   Rational Rose uses software from Mainsoft that lets MS Windows
    applications be recompiled to run on UNIX.
 
    There are 2 Mainsoft Knowledgebase pages that relate to UNIX
@@ -1699,7 +1710,7 @@ A: This problem might occur on other applications besides the one
      With MWWM=MWM, it works ok too except that for the main
      window,  no borders are drawn  by the WM and Rose draws
      it's own  borders (I  have  fvwm respecting   MWM decor
-     hints).   (This  is     correct  as mentioned by    the
+     hints).  (This   is     correct  as mentioned by    the
      Knowledgebase pages above.)   I don't  recall what Rose
      looks like with dtwm, but I suspect it's quite close to
      all MWWM=MWM.
@@ -1747,7 +1758,7 @@ A: Our naming convention is sometimes a source of confusion, and when
    and the current PAGE were 0 1, the SCREEN would show only the
    windows located there, plus any sticky ones.
 
-   Desktops are numbered consecutively, beginning with 0. The user is
+   Desktops are numbered consecutively, beginning with 0.  The user is
    not responsible for creating new desktops, those details are
    handled inside fvwm.  To display the different desktops, the user
    can configure key bindings that determine which desktop is
@@ -1770,7 +1781,7 @@ A: Our naming convention is sometimes a source of confusion, and when
      Key F4 A M GotoPage 1 1
 
    It is also a good idea to create a pager that displays several
-   desktops, side by side. This command displays the first 4 desktops:
+   desktops, side by side.  This command displays the first 4 desktops:
 
      Module FvwmPager 0 3
 
@@ -1798,7 +1809,7 @@ A: If you want more color icons, grab the ones out of the ctwm
    http://www.sct.gu.edu.au/~anthony/icons/ (which has a lot, I
    believe).
 
-   Icons used to be distribued along with fvwm.  Now there is a basic
+   Icons used to be distributed along with fvwm.  Now there is a basic
    set of icons available at the fvwm web site.  You might find some
    links at the fvwm web site to other sources of icons.
 
@@ -1810,7 +1821,7 @@ A: If you want more color icons, grab the ones out of the ctwm
 6.4  Linux XF86 virtual screen size &amp; fvwm interaction...
 
 A: Turn off the Linux Virtual Screen stuff in your XF86Config file if
-   you don't like it....  The XFree86 virtual screen feature and hardware
+   you don't like it.  The XFree86 virtual screen feature and hardware
    panning support in certain video cards is a pretty useless kludge when
    you're using a window manager that implements virtual desktops.
 
@@ -1845,6 +1856,46 @@ A: Setting the background image is not really part of the window
 
    The fvwm module FvwmBacker can be used to change the background
    depending on the desk you are currently on.
+
+<hr>
+6.7  When I use Fvwm --- isn't the right color.  Whats wrong?
+
+A: Under this heading we've had questions about FvwmForm being all
+   white, icons not displaying and messages about being unable to
+   allocate colors.
+
+   Older hardware uses something called 8 bit color.  You can also
+   misconfigure newer hardware so that its only using 8 bit color.
+   When you use 8 bit color, your display can only have 256 colors on
+   it at once.
+
+   This is explained in excruciating detail in the
+   <A HREF="http://www.sunhelp.org/faq/FrameBuffer.html">Frame Buffer FAQ</A>
+
+   If your display can support more than 256 colors, that's the way to
+   go.  Look up the documentation for your X server.  You may want to
+   start with "man X".
+
+   If you are stuck with 8 bit color, fvwm can help.  In the 2.2.x
+   releases, you can use the "ColorLimit" command to reduce the number
+   of colors Fvwm uses in icons.  In the 2.3.x releases and later,
+   ColorLimiting is automatic, but you still might want to use this
+   command to further reduce color use.
+
+   Other things you may want to do:
+
+   - Always run Netscape with the "-install" argument.
+
+   - If you use an image on your screen background, reduce the number
+     of colors it uses.  For xv add the "-nc nn" argument.  For
+     xli use the "-colors nn" argument.
+
+   - Don't use color gradients.
+
+   - Some applications are color hungry.  Beware of anything TK based,
+     and FrameMaker in its default setting.
+
+   If you still have problems after this, try the fvwm mailing list.
 
 <hr>              7 - Hints and Examples from the Developers
 <hr>
@@ -2193,7 +2244,7 @@ A: Setting the background image is not really part of the window
 </pre>
     <hr>
 <!-- This file automatically generated by txt2html.sh
-     on Sun Mar 18 18:11:56 EST 2001 -->
+     on Tue May  1 21:19:38 EDT 2001 -->
   </body>
 </html>
 
