@@ -1,3 +1,7 @@
+2001-05-01  Dan Espen  <dane@mk.telcordia.com>
+
+	* generated/FAQ.html: Regenerated FAQ.
+
 2001-04-16  Dan Espen  <dane@mk.telcordia.com>
 
 	* index.html: 
